// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Thumbnail component should render <ExternalLink> or <BrokenImage> for specific mime types 1`] = `
<a
  onClick={[Function]}
  onKeyPress={[Function]}
  title="Click to open a preview of /test/mediaUrl"
>
  <LockIcon
    color="secondary"
  />
</a>
`;

exports[`Thumbnail component should render <ExternalLink> or <BrokenImage> for specific mime types 2`] = `
<a
  onClick={[Function]}
  onKeyPress={[Function]}
  title="Click to open a preview of /test/mediaUrl"
>
  <LockIcon
    color="secondary"
  />
</a>
`;

exports[`Thumbnail component should render <ExternalLink> or <BrokenImage> for specific mime types 3`] = `
<a
  onClick={[Function]}
  onKeyPress={[Function]}
  title="Click to open a preview of /test/mediaUrl"
>
  <LockIcon
    color="secondary"
  />
</a>
`;

exports[`Thumbnail component should render <ExternalLink> or <BrokenImage> for specific mime types 4`] = `
<a
  onClick={[Function]}
  onKeyPress={[Function]}
  title="Click to open a preview of /test/mediaUrl"
>
  <LockIcon
    color="secondary"
  />
</a>
`;

exports[`Thumbnail component should render FLV files as a thumbnail only for specific mime types 1`] = `
<a
  onClick={[Function]}
  onKeyPress={[Function]}
  title="Click to open a preview of video.flv"
>
  <LockIcon
    color="secondary"
  />
</a>
`;

exports[`Thumbnail component should render PDF files as a thumbnail only plus link to original 1`] = `
<WithStyles(ExternalLink)
  className=""
  classes={Object {}}
  href="pdf.jpg"
  openInNewIcon={false}
  rel="noopener noreferrer"
  target="_blank"
  title="original.pdf"
>
  <Img
    alt="thumbnail.jpg"
    className=""
    container={[Function]}
    crossOrigin="anonymous"
    decode={true}
    loader={
      <ForwardRef(WithStyles)
        size={15}
        thickness={1}
      />
    }
    src="/test/thumbnail/mediaUrl"
    unloader={
      <Memo(BrokenImageIcon)
        color="secondary"
      />
    }
  />
</WithStyles(ExternalLink)>
`;

exports[`Thumbnail component should show a broken thumbnail icon when the thumbnail wont load. 1`] = `
<a
  onClick={[Function]}
  onKeyPress={[Function]}
  title="Click to open a preview of /test/mediaUrl"
>
  <LockIcon
    color="secondary"
  />
</a>
`;

exports[`Thumbnail component should show a broken thumbnail icon when the thumbnail wont load. 2`] = `
<a
  onClick={[Function]}
  onKeyPress={[Function]}
  title=""
>
  <LockIcon
    color="secondary"
  />
</a>
`;
